<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">HaPpy Tours</string>
    <string name="st_01">Nalintha Rentals</string>
    <string name="nalintha_rentals">Nalintha Rentals</string>
    <string name="todo1">TODO</string>
    <string name="img_1">image1</string>
    <string name="Nalintha_rentals">Nalintha_rentals</string>
    <string name="st_2">Nugegoda</string>
    <string name="st_3">071 3420950</string>
    <string name="nugegoda">Nugegoda</string>
    <string name="Nugegoda">Nugegoda</string>
    <string name="st_4">+9171 3420950</string>
    <string name="quentity">quentity</string>
    <string name="no_of_days">no of days</string>
    <string name="date_to_be_recieved">Date to be recieved</string>
    <string name="nic">NIC</string>
    <string name="name">name</string>
    <string name="submit" tools:ignore="DuplicateDefinition">Make Reservation</string>
    <string name="textview1">TextView</string>
    <string name="textview2">TextView</string>
    <string name="textview3">TextView</string>
    <string name="todo2">TODO</string>
    <string name="confirm">Confirm</string>
    <string name="todo">image1</string>
    <string name="textview">st_text1</string>
    <string name="openSecond">openSecond</string>
    <string name="make_reservation">Make Reservation</string>
    <string name="tvFoodname">Enter Food Name</string>
    <string name="htFoodname">Food name</string>
    <string name="tvCategoy">Food Category</string>
    <string name="tvPrice">Price</string>
    <string name="htPrice">Price</string>
    <string name="tvportion">Portion</string>
    <string name="ctDEsc">NULL</string>
    <string name="tvShop">Restaurant Name</string>
    <string name="htShop">Restaurant Name</string>
    <string name="tvCity">Located City</string>
    <string name="htCity">City Name</string>
    <string name="btnAdd">ADD</string>
    <string name="viewbtn">View Food</string>
    <string name="tvname">Name</string>
    <string name="foodname">Food Name :</string>
    <string name="rupee">Rs.</string>
    <string name="portionname">"Portion : "</string>
    <string name="btn_order">Order Now</string>
    <string name="Txt1">Find The Best Food Around You</string>
    <string name="orderqty">Enter Quantity</string>
    <string name="addcart">Add Cart</string>
    <string name="orderqnty">Quantity</string>
    <string name="ordertotalval">Total</string>
    <string name="ovbutton">View Your Orders</string>
    <string name="OrderViewNameHeading">My Orders</string>
    <string name="buttonrentbt">Rent A Vehicle</string>
    <string name="txttopic">HAPPY TOURS</string>
    <string name="buttonrent">Rent a vehicle</string>
    <string name="buttonhotel">Book a hotel</string>
    <string name="buttonfood">Order food</string>
    <string name="paynowbutton">Pay Now</string>
</resources>