<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="15dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="15dp">
        <TextView
            android:id="@+id/foodname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:shadowColor="@color/black"
            android:text="@string/foodname"
            android:textColor="@color/black"
            android:textSize="25sp" />
        <TextView
            android:id="@+id/tvname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tvname"
            android:textColor="@color/black"
            android:shadowColor="@color/black"
            android:textSize="25sp" /></LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="15dp">
        <TextView
            android:id="@+id/rupees"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:shadowColor="@color/black"
            android:text="@string/rupee"
            android:textColor="@color/black"
            android:textSize="25sp" />
        <TextView
            android:id="@+id/tvprice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tvname"
            android:textColor="@color/black"
            android:shadowColor="@color/black"
            android:textSize="25sp"
            android:layout_marginStart="5dp"/></LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="15dp">

        <TextView
            android:id="@+id/tvportionvalue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:shadowColor="@color/black"
            android:text="@string/tvportion"
            android:textColor="@color/black"
            android:textSize="25sp" />
        <TextView
            android:id="@+id/tvportion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:shadowColor="@color/black"
            android:text="@string/tvname"
            android:textSize="25sp"
            android:layout_marginStart="5dp"/></LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="15dp">

        <TextView
            android:id="@+id/tvshopvalue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:shadowColor="@color/black"
            android:text="@string/tvShop"
            android:textColor="@color/black"
            android:textSize="25sp" />
        <TextView
            android:id="@+id/tvshop"
            android:layout_width="wrap_content"
            android:textColor="@color/black"
            android:shadowColor="@color/black"
            android:layout_height="wrap_content"
            android:text="@string/tvname"
            android:textSize="25sp"
            android:layout_marginStart="5dp"/>
        </LinearLayout>

</LinearLayout>