<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".homepage">

    <ImageView
        android:id="@+id/imghome"
        android:layout_width="match_parent"
        android:layout_height="1130dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.545"
        app:srcCompat="@drawable/home1" />

    <TextView
        android:id="@+id/txttopic"
        android:layout_width="546dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="306dp"
        android:fontFamily="casual"
        android:text="@string/txttopic"
        android:textAlignment="center"
        android:textSize="60sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imghome" />

    <Button
        android:id="@+id/buttonrent"
        android:layout_width="318dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/buttonrent"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txttopic" />

    <Button
        android:id="@+id/buttonhotel"
        android:layout_width="318dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/buttonhotel"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonrent" />

    <Button
        android:id="@+id/buttonfood"
        android:layout_width="318dp"
        android:layout_height="wrap_content"
        android:text="@string/buttonfood"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/imghome"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonhotel"
        app:layout_constraintVertical_bias="0.061" />
</androidx.constraintlayout.widget.ConstraintLayout>