<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:padding="15dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="15dp">
        <TextView
            android:id="@+id/name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:shadowColor="@color/black"
            android:text="@string/foodname"
            android:textColor="@color/black"
            android:textSize="25sp" />
        <TextView
            android:id="@+id/tvorderfoodname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tvname"
            android:layout_marginStart="4dp"
            android:textColor="@color/black"
            android:shadowColor="@color/black"
            android:textSize="25sp" /></LinearLayout>
    <LinearLayout
        android:id="@+id/pricelayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="15dp">

        <TextView
            android:id="@+id/orderqty"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:shadowColor="@color/black"
            android:text="@string/orderqnty"
            android:textColor="@color/black"
            android:textSize="25sp" />
        <TextView
            android:id="@+id/orderitemqty"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tvname"
            android:textColor="@color/black"
            android:shadowColor="@color/black"
            android:textSize="25sp"
            android:layout_marginStart="8dp"/></LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="15dp">

        <TextView
            android:id="@+id/ordertotal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:shadowColor="@color/black"
            android:text="@string/ordertotalval"
            android:textColor="@color/black"
            android:textSize="25sp" />
        <TextView
            android:id="@+id/totalamount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:shadowColor="@color/black"
            android:text="@string/tvname"
            android:textSize="25sp"
            android:layout_marginStart="5dp"/></LinearLayout>
</LinearLayout>